<resources>
    <string name="app_name">food</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ed_name">"Name"</string>
    <string name="ed_pass">"Password"</string>
    <string name="resgister">"Register"</string>
    <string name="log_in">"Log In"</string>
    <string name="ed_email">"Email"</string>
    <string name="cre_acc">Create new account</string>
</resources>