<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login2">

    <EditText
        android:id="@+id/ed_email2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/ed_email"
        android:minHeight="48dp"
        android:background="@drawable/border_custom"

        android:textSize="24sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="1in"
        android:layout_marginBottom="20dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/ed_password2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/ed_pass"
        android:minHeight="48dp"
        android:background="@drawable/border_custom"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/log_in"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tv_cre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cre_acc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
</LinearLayout>